single question with 4 answers styles improvements

--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -6,6 +6,12 @@
   </youtube-player>
 </div>
 
-<button (click)="play()"> Grej </button>
+<div class="song-container">
+  <span class="answer-top-left rotate-counter" *ngIf="areAnswersVisible" (click)="makeGuess(answers[0])"> {{answers[0]}}</span>
+  <span class="answer-top-right rotate-clockwise" *ngIf="areAnswersVisible" (click)="makeGuess(answers[1])"> {{answers[1]}}</span>
 
-<button (click)="answer()"> Answer </button>
+  <button (click)="play()" class="song-button"></button>
+
+  <span class="answer-bottom-left rotate-clockwise" *ngIf="areAnswersVisible" (click)="makeGuess(answers[2])"> {{answers[2]}}</span>
+  <span class="answer-bottom-right rotate-counter" *ngIf="areAnswersVisible" (click)="makeGuess(answers[3])">{{answers[3]}}</span>
+</div>
