--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -8,7 +8,7 @@
       [title]="song.title"
       [videoId]="song.videoId"
       [startTime]="song.startTime"
-      [wrongAnswers]="wrongAnswers"
+      [answers]="song.answers"
     ></app-question>
   </div>
 </div>
