--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-center root-container">
   <router-outlet></router-outlet>
 </div>
 
