--- a/src/app/components/name/name.component.html
+++ b/src/app/components/name/name.component.html
@@ -1,7 +1,13 @@
-<p>
-  name works!
+<div class="container-fluid">
+  <p class="mt-4">
+    Podaj swoją ksywkę, graczu:
+  </p>
 
-  <input [(ngModel)]="playerName"/>
+  <div class="offset-lg-5 col-lg-2 offset-sm-4 col-sm-4 col-12 mt-3">
+    <input class="form-control" [(ngModel)]="playerName"/>
+  </div>
 
-  <button [disabled]="playerName == ''" (click)="goToQuiz()"> DO QUIZU</button>
-</p>
+  <div class="mt-4">
+    <button class="btn btn-warning" [disabled]="playerName == ''" (click)="goToQuiz()"> Rozpocznij Quiz! </button>
+  </div>
+</div>
