extended songs base, corrected quiz questions flow

--- a/src/app/components/name/name.component.html
+++ b/src/app/components/name/name.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <p class="mt-4">
-    Podaj swoją ksywkę, graczu:
+    Podaj swoją ksywkę:
   </p>
 
   <div class="offset-lg-5 col-lg-2 offset-sm-4 col-sm-4 col-12 mt-3">
